Modification de la methode de recuperation des avis
